--- a/myApp/src/pages/manage-clients/manage-clients.html
+++ b/myApp/src/pages/manage-clients/manage-clients.html
@@ -14,8 +14,11 @@
 </ion-header>
 
 
-<ion-content padding>
-
-  test
-
+<ion-content>
+  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-list>
+    <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
+      {{ item }}
+    </button>
+  </ion-list>
 </ion-content>
