--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-navbar>
+<ion-header color="fmsRed">
+  <ion-navbar color="fmsRed">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -14,7 +14,7 @@
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button secondary menuToggle color="fmsRed">Toggle Menu</button>
 
   <ion-grid>
     <ion-row>
