--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the ClientDetailsPage page.
+  Generated template for the ScreenResultsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -9,7 +9,7 @@
   <ion-navbar color="fmsRed">
     <ion-title>{{ item }}</ion-title>
   </ion-navbar>
-<div style="clear: both"></div>
+
 </ion-header>
 
 
