--- a/myApp/src/pages/terms-conditions/terms-conditions.html
+++ b/myApp/src/pages/terms-conditions/terms-conditions.html
@@ -4,15 +4,21 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="fmsRed">
 
-  <ion-navbar>
-    <ion-title>terms-conditions</ion-title>
+  <ion-navbar color="fmsRed">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Terms & Conditions</ion-title>
+    <div style="clear: both"></div>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </ion-content>
