--- a/myApp/src/pages/list/list.html
+++ b/myApp/src/pages/list/list.html
@@ -1,5 +1,5 @@
-<ion-header>
-  <ion-navbar>
+<ion-header color="fmsRed">
+  <ion-navbar color="fmsRed">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
