--- a/myApp/src/pages/logout/logout.html
+++ b/myApp/src/pages/logout/logout.html
@@ -4,8 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
+<ion-header color="fmsRed">
+  <ion-navbar color="fmsRed">
     <ion-title>Login</ion-title>
   </ion-navbar>
 </ion-header>
