--- a/myApp/src/pages/recent-screens/recent-screens.html
+++ b/myApp/src/pages/recent-screens/recent-screens.html
@@ -4,15 +4,25 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="fmsRed">
 
-  <ion-navbar>
+  <ion-navbar color="fmsRed">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Recent Screens</ion-title>
+    <div style="clear: both"></div>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content >
+
+  <ion-list>
+    <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
+      {{ item }}
+    </button>
+  </ion-list>
 
 </ion-content>
