--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -7,32 +7,20 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content class="card-background-page">
+  <ion-card>
+    <img src="../../../www/assets/img/hero.jpg"/>
+    <div class="card-title">São Paulo</div>
+    <div class="card-subtitle">41 Listings</div>
+
+  </ion-card>
+</ion-content>
+
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <button ion-button outline [navPush]="pushPage" [navParams]="params" block color="fmsRed">Manage clients</button>
 
-  <button ion-button secondary menuToggle color="fmsRed">Toggle Menu</button>
+  <button ion-button outline [navPush]="pushPage1" [navParams]="params" block color="fmsRed">Recent Screens</button>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6>
-        Level 1 Screen
-      </ion-col>
-      <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6>
-        Swing Characteristics
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6>
-        Manage Clients
-      </ion-col>
-      <ion-col col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6>
-        Recent Screens
-      </ion-col>
-    </ion-row>
-  </ion-grid>
 
 </ion-content>
