--- a/myApp/src/pages/edit-profile/edit-profile.html
+++ b/myApp/src/pages/edit-profile/edit-profile.html
@@ -7,12 +7,13 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>edit-profile</ion-title>
+    <ion-title>Edit Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <h2>Welcome {{item}}</h2>
+  <button ion-button block (click)="closeModal()">Close Modal</button>
 </ion-content>
