--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -8,19 +8,24 @@
 </ion-header>
 
 <ion-content class="card-background-page">
-  <ion-card>
-    <img src="../../../www/assets/img/hero.jpg"/>
-    <div class="card-title">São Paulo</div>
-    <div class="card-subtitle">41 Listings</div>
 
+  <ion-card class="full-w">
+    <img src="../../assets/img/hero.jpg"/>
+    <div class="card-title"><img src="../../assets/img/FMS_System_4Color_WHITE_RED.svg" style="max-height: 80px"/></div>
   </ion-card>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6 text-center [navPush]="pushPage" [navParams]="params">
+        <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
+        <p>Manage Clients</p>
+      </ion-col>
+      <ion-col col-6 text-center [navPush]="pushPage1" [navParams]="params">
+        <img src="../../assets/img/recent-screens-01.svg" style="max-height: 80px"/>
+        <p>Recent Screens</p>
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
 
-<ion-content padding>
-
-  <button ion-button outline [navPush]="pushPage" [navParams]="params" block color="fmsRed">Manage clients</button>
-
-  <button ion-button outline [navPush]="pushPage1" [navParams]="params" block color="fmsRed">Recent Screens</button>
-
-
-</ion-content>
