--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -4,28 +4,28 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
 
+
+
+
+
+<ion-header color="fmsRed">
   <ion-navbar color="fmsRed">
     <ion-title>{{ item }}</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="openModal()">
-        <ion-icon name="options"></ion-icon>
-      </button>
+    <ion-buttons right>
+      <button ion-button icon-only (click)="openModal()"><ion-icon name="create"></ion-icon></button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-
-<ion-content >
+<ion-content class="card-background-page">
 
   <ion-card class="full-w">
     <img src="../../assets/img/hero.jpg"/>
-    <div class="card-title">FMS</div>
-    <div class="card-subtitle">Join the movement</div>
+    <div class="card-title"><img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/></div>
+    <div class="card-subtitle" style="top: 72%;">{{ item }}</div>
   </ion-card>
 
-  <h2>Welcome {{ item }}</h2>
   <ion-item-group>
     <ion-item-divider color="dark">Client Details</ion-item-divider>
     <ion-item>
@@ -64,5 +64,5 @@
 
 
   </ion-item-group>
-
 </ion-content>
+
