--- a/myApp/src/pages/manage-clients/manage-clients.html
+++ b/myApp/src/pages/manage-clients/manage-clients.html
@@ -11,11 +11,13 @@
     </button>
     <ion-title>Manage Clients</ion-title>
   </ion-navbar>
+  <ion-toolbar color="fmsRedSecondary">
+    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
-  <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="itemSelected(item)">
 
