--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -27,7 +27,7 @@
   </ion-card>
 
   <ion-item-group>
-    <ion-item-divider color="dark">Client Details</ion-item-divider>
+    <ion-item-divider color="light">Client Details</ion-item-divider>
     <ion-item>
       <ion-row>
         <ion-col col-6 >
