--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -29,3 +29,9 @@
   </ion-grid>
 </ion-content>
 
+<ion-footer>
+  <ion-toolbar color="dark">
+    <ion-title>Footer</ion-title>
+  </ion-toolbar>
+</ion-footer>
+
