add edit client layouts

--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -61,8 +61,8 @@
       </ion-row>
     </ion-item>
 
-
-
   </ion-item-group>
+
+  <button ion-button full block color="primary" (click)="doConfirm()">Delete Client</button>
 </ion-content>
 
