--- a/myApp/src/pages/new-client/new-client.html
+++ b/myApp/src/pages/new-client/new-client.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the EditProfilePage page.
+  Generated template for the NewClientPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="fmsRedSecondary">
-    <ion-title>Edit Profile</ion-title>
+    <ion-title>New Client</ion-title>
     <ion-buttons right>
       <button ion-button icon-only (click)="closeModal()"><ion-icon ios="ios-close" md="md-close"></ion-icon></button>
     </ion-buttons>
@@ -29,7 +29,6 @@
       <ion-input type="text" value=""></ion-input>
     </ion-item>
 
-    
     <ion-item>
       <ion-label stacked>Gender</ion-label>
       <ion-select >
