--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -26,6 +26,19 @@
     <div class="card-subtitle" style="top: 72%;">{{ item }}</div>
   </ion-card>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+        <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+      <ion-col col-6 text-center>
+
+      </ion-col>
+    </ion-row>
+
+  </ion-grid>
+
+
   <ion-item-group>
     <ion-item-divider color="light">Client Details</ion-item-divider>
     <ion-item>
