--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -32,5 +32,23 @@
     </ion-item-sliding>
   </ion-list>
 
+  <ion-item-group>
+    <ion-item-divider color="light">Level 1 Screen Results</ion-item-divider>
+    <ion-item>
+      <ion-row>
+        <ion-col col-6 >
+          Deep Squat
+        </ion-col>
+        <ion-col col-6 text-right>
+
+        </ion-col>
+      </ion-row>
+    </ion-item>
+
+
+
+
+  </ion-item-group>
+
 
 </ion-content>
