add screening modals

--- a/myApp/src/pages/screening-fms/screening-fms.html
+++ b/myApp/src/pages/screening-fms/screening-fms.html
@@ -17,17 +17,30 @@
 
   <ion-list>
     <ion-list-header>
-      Hobbits
+      Functional Movement Screen
     </ion-list-header>
     <a ion-item (click)="openModal({charNum: 0})">
-      Gollum
+      Deep Squat
     </a>
     <a ion-item (click)="openModal({charNum: 1})">
-      Frodo Baggins
+      Hurdle Step
     </a>
     <a ion-item (click)="openModal({charNum: 2})">
-      Sam
+      Inline Lunge
     </a>
+    <a ion-item (click)="openModal({charNum: 3})">
+      Shoulder Mobility
+    </a>
+    <a ion-item (click)="openModal({charNum: 4})">
+      Active Straight-Leg Raise
+    </a>
+    <a ion-item (click)="openModal({charNum: 5})">
+      Trunk Stability Pushup
+    </a>
+    <a ion-item (click)="openModal({charNum: 6})">
+      Rotary Stability
+    </a>
+
   </ion-list>
 
 </ion-content>
