--- a/myApp/src/pages/screening-modal/screening-modal.html
+++ b/myApp/src/pages/screening-modal/screening-modal.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Screening FMS
+      {{character.name}}
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
