--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -30,6 +30,7 @@
     <ion-row>
       <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
         <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
+        Level 1
       </ion-col>
       <ion-col col-6 text-center>
 
