--- a/myApp/src/pages/logout/logout.html
+++ b/myApp/src/pages/logout/logout.html
@@ -4,30 +4,31 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
-  <ion-navbar color="fmsRed">
-    <ion-title>Login</ion-title>
-  </ion-navbar>
-</ion-header>
+
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-12>
+        <div style="padding: 0 0 20px;">
+          <img src="../../assets/img/FMS_System_4Color_WHITE_RED.svg" style="max-height: 50px"/>
+        </div>
 
-  <ion-list>
-
-    <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text" value=""></ion-input>
-    </ion-item>
-
-    <ion-item>
-      <ion-label floating>Password</ion-label>
-      <ion-input type="password" value=""></ion-input>
-    </ion-item>
-
-  </ion-list>
-
-  <div padding>
-    <button ion-button color="primary" block>Sign In</button>
-  </div>
+        <ion-list>
+          <ion-item>
+            <ion-label floating>Username</ion-label>
+            <ion-input type="text" value=""></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label floating>Password</ion-label>
+            <ion-input type="password" value=""></ion-input>
+          </ion-item>
+        </ion-list>
+        <div padding>
+          <button ion-button color="primary" block>Sign In</button>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
