--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -42,13 +42,16 @@
 
   <ion-item-group>
     <ion-item-divider color="light">Client Details</ion-item-divider>
+    <button ion-item [navPush]="pushScreenHistory">
+      Screen History
+    </button>
     <ion-item>
       <ion-row>
-        <ion-col col-6 >
+        <ion-col col-2 >
           Email:
         </ion-col>
-        <ion-col col-6 text-right>
-          email@email.com
+        <ion-col col-10 text-right>
+          email@functionalmovement.com
         </ion-col>
       </ion-row>
     </ion-item>
