--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -22,7 +22,27 @@
       </ion-col>
     </ion-row>
 
+    <ion-row style="padding-bottom: 20px;">
+      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+        <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+      <ion-col col-6 text-center>
+        <img src="../../assets/img/SFMA-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+        <img src="../../assets/img/FCS-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+      <ion-col col-6 text-center>
+        <img src="../../assets/img/YBalance-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+    </ion-row>
+
   </ion-grid>
+
+
 </ion-content>
 
 
