--- a/myApp/src/pages/screen-history/screen-history.html
+++ b/myApp/src/pages/screen-history/screen-history.html
@@ -16,11 +16,29 @@
 
 <ion-content>
   <ion-list>
-    <button ion-item [navPush]="pushScreenResults">
+    <button ion-item (click)="openModal({charNum: 0})">
       <ion-avatar item-start>
         <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
       </ion-avatar>
-      test
+      FMS
+    </button>
+    <button ion-item (click)="openModal({charNum: 1})">
+      <ion-avatar item-start>
+        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+      </ion-avatar>
+      SFMA
+    </button>
+    <button ion-item (click)="openModal({charNum: 2})">
+      <ion-avatar item-start>
+        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+      </ion-avatar>
+      FCS
+    </button>
+    <button ion-item (click)="openModal({charNum: 3})">
+      <ion-avatar item-start>
+        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+      </ion-avatar>
+      YBT
     </button>
   </ion-list>
 
