--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -4,51 +4,38 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
-
-  <ion-navbar color="fmsRed">
-    <ion-title>Screen Results</ion-title>
-  </ion-navbar>
-
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      {{character.name}}
+    </ion-title>
+    <ion-buttons start>
+      <button ion-button (click)="dismiss()">
+        <span ion-text color="primary" showWhen="ios">Close</span>
+        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
-
-<ion-content >
-
+<ion-content>
   <ion-list>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-avatar item-start>
-          <img src="../../assets/img/user-placeholder.svg" />
-        </ion-avatar>
-        <h2>{{ item }}</h2>
-      </ion-item>
-      <ion-item-options side="right">
-        <button ion-button color="primary">
-          <ion-icon name="mail"></ion-icon>
-          Email Results
-        </button>
-      </ion-item-options>
-    </ion-item-sliding>
-  </ion-list>
-
-  <ion-item-group>
-    <ion-item-divider color="light">Level 1 Screen Results</ion-item-divider>
     <ion-item>
-      <ion-row>
-        <ion-col col-6 >
-          Deep Squat
-        </ion-col>
-        <ion-col col-6 text-right>
-
-        </ion-col>
-      </ion-row>
+      <ion-avatar item-start>
+        <img src="{{character.image}}">
+      </ion-avatar>
+      <h2>{{character.name}}</h2>
     </ion-item>
 
+    <ion-item>
+      <ion-label>Scoring</ion-label>
+      <ion-select [(ngModel)]="screeningFMS" interface="popover">
+        <ion-option value="1">1</ion-option>
+        <ion-option value="2">2</ion-option>
+        <ion-option value="3">3</ion-option>
+      </ion-select>
+    </ion-item>
 
-
-
-  </ion-item-group>
-
-
+    <button ion-button full block color="primary" (click)="dismiss()">Save</button>
+  </ion-list>
 </ion-content>
