--- a/myApp/src/pages/screen-history/screen-history.html
+++ b/myApp/src/pages/screen-history/screen-history.html
@@ -30,7 +30,7 @@
     </button>
     <button ion-item (click)="openModal({charNum: 2})">
       <ion-avatar item-start>
-        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+        <img src="../../assets/img/FCS-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       FCS
     </button>
