--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -25,17 +25,13 @@
         <img src="{{character.image}}">
       </ion-avatar>
       <h2>{{character.name}}</h2>
+      <p>{{character.quote}}</p>
     </ion-item>
-
-    <ion-item>
-      <ion-label>Scoring</ion-label>
-      <ion-select [(ngModel)]="screeningFMS" interface="popover">
-        <ion-option value="1">1</ion-option>
-        <ion-option value="2">2</ion-option>
-        <ion-option value="3">3</ion-option>
-      </ion-select>
+    <ion-item *ngFor="let item of character['items']">
+      {{item.title}}
+      <ion-note item-end>
+        {{item.note}}
+      </ion-note>
     </ion-item>
-
-    <button ion-button full block color="primary" (click)="dismiss()">Save</button>
   </ion-list>
 </ion-content>
