modify screen history

--- a/myApp/src/pages/screen-history/screen-history.html
+++ b/myApp/src/pages/screen-history/screen-history.html
@@ -18,13 +18,13 @@
   <ion-list>
     <button ion-item (click)="openModal({charNum: 0})">
       <ion-avatar item-start>
-        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+        <img src="../../assets/img/FMS-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       FMS
     </button>
     <button ion-item (click)="openModal({charNum: 1})">
       <ion-avatar item-start>
-        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+        <img src="../../assets/img/SFMA-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       SFMA
     </button>
@@ -36,7 +36,7 @@
     </button>
     <button ion-item (click)="openModal({charNum: 3})">
       <ion-avatar item-start>
-        <img src="../../assets/img/user-placeholder.svg" style="max-height: 60px"/>
+        <img src="../../assets/img/YBT-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       YBT
     </button>
