--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -5,13 +5,13 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="fmsRedSecondary">
     <ion-title>
       {{character.name}}
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">Close</span>
+        <span ion-text showWhen="ios">Close</span>
         <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
@@ -27,11 +27,21 @@
       <h2>{{character.name}}</h2>
       <p>{{character.quote}}</p>
     </ion-item>
-    <ion-item *ngFor="let item of character['items']">
-      {{item.title}}
-      <ion-note item-end>
-        {{item.note}}
-      </ion-note>
+    <ion-item *ngFor="let item of character['items']; let i=index" text-wrap (click)="toggleGroup(i)" [ngClass]="{active: isGroupShown(i)}">
+      <h3>
+        {{item.title}}
+        <ion-note item-end>
+          {{item.note}}
+        </ion-note>
+        <ion-icon color="success" item-right [name]="isGroupShown(i) ? 'arrow-dropdown' : 'arrow-dropright'"></ion-icon>
+      </h3>
+      <div *ngIf="isGroupShown(i)"><small class="item item-text-wrap" [innerHTML]="item.description"></small></div>
     </ion-item>
   </ion-list>
+
+
+
+
+
+
 </ion-content>
