modify fms screen and colors

--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -9,8 +9,8 @@
 
 
 
-<ion-header color="fmsRed">
-  <ion-navbar color="fmsRed">
+<ion-header color="dark">
+  <ion-navbar color="dark">
     <ion-title>{{ item }}</ion-title>
     <ion-buttons right>
       <button ion-button icon-only (click)="openModal()"><ion-icon name="create"></ion-icon></button>
@@ -80,6 +80,6 @@
 
   </ion-item-group>
 
-  <button ion-button full block color="primary" (click)="doConfirm()">Delete Client</button>
+  <button ion-button full block color="fmsRedSecondary" (click)="doConfirm()">Delete Client</button>
 </ion-content>
 
