--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -1,29 +1,19 @@
-<ion-header color="fmsRed">
-  <ion-navbar color="fmsRed">
+<ion-header>
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title><img src="../../assets/img/FMS_System_4Color_WHITE_RED.svg" style="height: 30px"/></ion-title>
+
   </ion-navbar>
 </ion-header>
 
 <ion-content class="card-background-page">
 
-  <ion-card class="full-w">
-    <img src="../../assets/img/hero.jpg"/>
-    <div class="card-title"><img src="../../assets/img/FMS_System_4Color_WHITE_RED.svg" style="max-height: 80px"/></div>
-  </ion-card>
-
   <ion-grid>
-    <ion-row>
-      <ion-col col-12 text-center [navPush]="pushPage" [navParams]="params">
-        <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
-        <p>Manage Clients</p>
-      </ion-col>
-    </ion-row>
 
     <ion-row style="padding-bottom: 20px;">
-      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+      <ion-col col-6 text-center [navPush]="pushPageScreeningFms">
         <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
       </ion-col>
       <ion-col col-6 text-center>
@@ -37,6 +27,13 @@
       </ion-col>
       <ion-col col-6 text-center>
         <img src="../../assets/img/YBalance-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col col-12 text-center [navPush]="pushPage" [navParams]="params">
+        <img src="../../assets/img/manage-clients-01.svg" style="max-height: 80px"/>
+        <p>Manage Clients</p>
       </ion-col>
     </ion-row>
 
