--- a/myApp/src/pages/manage-clients/manage-clients.html
+++ b/myApp/src/pages/manage-clients/manage-clients.html
@@ -4,14 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
-  <ion-navbar color="fmsRed">
+<ion-header color="dark">
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Manage Clients</ion-title>
   </ion-navbar>
-  <ion-toolbar color="fmsRedSecondary">
+  <ion-toolbar color="dark">
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
