--- a/myApp/src/pages/recent-screens/recent-screens.html
+++ b/myApp/src/pages/recent-screens/recent-screens.html
@@ -4,9 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
+<ion-header color="dark">
 
-  <ion-navbar color="fmsRed">
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
