--- a/myApp/src/pages/screen-history/screen-history.html
+++ b/myApp/src/pages/screen-history/screen-history.html
@@ -4,8 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header color="fmsRed">
-  <ion-navbar color="fmsRed">
+<ion-header color="dark">
+  <ion-navbar color="dark">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
