--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar color="fmsRedSecondary">
+  <ion-toolbar color="dark">
     <ion-title>
       {{character.name}}
     </ion-title>
