--- a/myApp/src/pages/screening-modal/screening-modal.html
+++ b/myApp/src/pages/screening-modal/screening-modal.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title>
       {{character.name}}
     </ion-title>
