--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -38,9 +38,17 @@
     </ion-row>
 
   </ion-grid>
+  <ion-item-divider color="light">Survey</ion-item-divider>
 
-
+  <ion-fab bottom center edge>
+    <button ion-fab mini (click)="openModal()"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
 
+<ion-footer>
+  <ion-toolbar color="dark">
+
+  </ion-toolbar>
+</ion-footer>
 
 
