--- a/myApp/src/pages/screen-history/screen-history.html
+++ b/myApp/src/pages/screen-history/screen-history.html
@@ -21,24 +21,28 @@
         <img src="../../assets/img/FMS-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       FMS
+      <p><small>Jul 1, 2017</small></p>
     </button>
     <button ion-item (click)="openModal({charNum: 1})">
       <ion-avatar item-start>
         <img src="../../assets/img/SFMA-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       SFMA
+      <p><small>Jul 5, 2017</small></p>
     </button>
     <button ion-item (click)="openModal({charNum: 2})">
       <ion-avatar item-start>
         <img src="../../assets/img/FCS-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       FCS
+      <p><small>Jul 20, 2017</small></p>
     </button>
     <button ion-item (click)="openModal({charNum: 3})">
       <ion-avatar item-start>
         <img src="../../assets/img/YBT-icon.svg" style="max-height: 60px"/>
       </ion-avatar>
       YBT
+      <p><small>Jul 25, 2017</small></p>
     </button>
   </ion-list>
 
