--- a/myApp/src/pages/client-details/client-details.html
+++ b/myApp/src/pages/client-details/client-details.html
@@ -30,10 +30,18 @@
     <ion-row>
       <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
         <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
-        Level 1
       </ion-col>
       <ion-col col-6 text-center>
+        <img src="../../assets/img/SFMA-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+    </ion-row>
 
+    <ion-row>
+      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+        <img src="../../assets/img/FCS-logo.svg" style="max-height: 50px"/>
+      </ion-col>
+      <ion-col col-6 text-center>
+        <img src="../../assets/img/YBalance-logo.svg" style="max-height: 50px"/>
       </ion-col>
     </ion-row>
 
@@ -41,10 +49,10 @@
 
 
   <ion-item-group>
-    <ion-item-divider color="light">Client Details</ion-item-divider>
-    <button ion-item [navPush]="pushScreenHistory">
+    <button ion-button full block [navPush]="pushScreenHistory" color="dark">
       Screen History
     </button>
+    <ion-item-divider color="light">Client Details</ion-item-divider>
     <ion-item>
       <ion-row>
         <ion-col col-2 >
