--- a/myApp/src/pages/edit-profile/edit-profile.html
+++ b/myApp/src/pages/edit-profile/edit-profile.html
@@ -4,9 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="dark">
 
-  <ion-navbar color="fmsRedSecondary">
+  <ion-navbar color="dark">
     <ion-title>Edit Profile</ion-title>
     <ion-buttons right>
       <button ion-button icon-only (click)="closeModal()"><ion-icon ios="ios-close" md="md-close"></ion-icon></button>
