--- a/myApp/src/pages/screen-results/screen-results.html
+++ b/myApp/src/pages/screen-results/screen-results.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="dark">
   <ion-toolbar color="dark">
     <ion-title>
       {{character.name}}
@@ -25,7 +25,7 @@
         <img src="{{character.image}}">
       </ion-avatar>
       <h2>{{character.name}}</h2>
-      <p>{{character.quote}}</p>
+      <p>{{character.date}}</p>
     </ion-item>
     <ion-item *ngFor="let item of character['items']; let i=index" text-wrap (click)="toggleGroup(i)" [ngClass]="{active: isGroupShown(i)}">
       <h3>
