--- a/myApp/src/pages/screening-modal/screening-modal.html
+++ b/myApp/src/pages/screening-modal/screening-modal.html
@@ -4,14 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header color="dark">
   <ion-toolbar color="dark">
     <ion-title>
       {{character.name}}
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">Cancel</span>
+        <span ion-text showWhen="ios">Close</span>
         <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
@@ -19,29 +19,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="{{character.image}}">
-      </ion-avatar>
-      <h2>{{character.name}}</h2>
-    </ion-item>
 
-    <ion-item>
-      <ion-label>Scoring</ion-label>
-    </ion-item>
-    <ion-segment padding>
-      <ion-segment-button value="1">
-        1
-      </ion-segment-button>
-      <ion-segment-button value="2">
-        2
-      </ion-segment-button>
-      <ion-segment-button value="3">
-        3
-      </ion-segment-button>
-    </ion-segment>
 
-    <button ion-button full block color="primary" (click)="dismiss()">Save</button>
-  </ion-list>
+  <ion-slides pager>
+
+    <ion-slide *ngFor="let item of character['items']">
+      <img src="{{item.image}}" class="slide-image"/>
+      <h2 class="slide-title">{{item.title}}</h2>
+      <p item-end><small>{{item.note}}</small></p>
+    </ion-slide>
+
+
+  </ion-slides>
+
 </ion-content>
