add coming soon page

--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -16,16 +16,16 @@
       <ion-col col-6 text-center [navPush]="pushPageScreeningFms">
         <img src="../../assets/img/FMS-logo.svg" style="max-height: 50px"/>
       </ion-col>
-      <ion-col col-6 text-center>
+      <ion-col col-6 text-center [navPush]="pushPageComingSoon">
         <img src="../../assets/img/SFMA-logo.svg" style="max-height: 50px"/>
       </ion-col>
     </ion-row>
 
     <ion-row>
-      <ion-col col-6 text-center [navPush]="pushFMSScreeningPage">
+      <ion-col col-6 text-center [navPush]="pushPageComingSoon">
         <img src="../../assets/img/FCS-logo.svg" style="max-height: 50px"/>
       </ion-col>
-      <ion-col col-6 text-center>
+      <ion-col col-6 text-center [navPush]="pushPageComingSoon">
         <img src="../../assets/img/YBalance-logo.svg" style="max-height: 50px"/>
       </ion-col>
     </ion-row>
