--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -22,7 +22,7 @@
     </ion-row>
 
     <ion-row>
-      <ion-col col-6 text-center [navPush]="pushPageComingSoon">
+      <ion-col col-6 text-center [navPush]="pushPageScreeningFcs">
         <img src="../../assets/img/FCS-logo.svg" style="max-height: 50px"/>
       </ion-col>
       <ion-col col-6 text-center [navPush]="pushPageComingSoon">
