--- a/myApp/src/pages/screening-fms/screening-fms.html
+++ b/myApp/src/pages/screening-fms/screening-fms.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="dark">
-    <ion-title>Screening</ion-title>
+    <ion-title>Screening FMS</ion-title>
   </ion-navbar>
 
 </ion-header>
