--- a/myApp/src/pages/home/home.html
+++ b/myApp/src/pages/home/home.html
@@ -25,7 +25,7 @@
       <ion-col col-6 text-center [navPush]="pushPageScreeningFcs">
         <img src="../../assets/img/FCS-logo.svg" style="max-height: 50px"/>
       </ion-col>
-      <ion-col col-6 text-center [navPush]="pushPageComingSoon">
+      <ion-col col-6 text-center [navPush]="pushPageScreeningYbt">
         <img src="../../assets/img/YBalance-logo.svg" style="max-height: 50px"/>
       </ion-col>
     </ion-row>
