--- a/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.html
+++ b/myApp/src/pages/screening-modal-fcs/screening-modal-fcs.html
@@ -7,7 +7,7 @@
 <ion-header color="dark">
   <ion-toolbar color="dark">
     <ion-title>
-      {{character.name}}
+      Ankle Clearing
     </ion-title>
     <ion-buttons start>
       <button ion-button (click)="dismiss()">
@@ -19,17 +19,102 @@
 </ion-header>
 
 <ion-content>
+  <ion-item-divider color="light">Left Ankle Clearing</ion-item-divider>
 
+  <ion-grid style="padding-top: 0;">
+    <ion-row>
+      <ion-col col-12>
+        <p style="line-height: 0; margin:15px 0;"><strong>Knee position:</strong></p>
+        <ion-segment>
+          <ion-segment-button value="behind_malleolus">
+            <small>Behind Malleolus</small>
+          </ion-segment-button>
+          <ion-segment-button value="within_malleolus">
+            <small>Within Malleolus</small>
+          </ion-segment-button>
+          <ion-segment-button value="beyond_malleolus">
+            <small>Beyond Malleolus</small>
+          </ion-segment-button>
+        </ion-segment>
 
-  <ion-slides pager>
+        <p style="line-height: 0; margin:15px 0;"><strong>Pain with movement</strong></p>
 
-    <ion-slide *ngFor="let item of character['items']">
-      <img src="{{item.image}}" class="slide-image" style="max-height: 250px;"/>
-      <h2 class="slide-title">{{item.title}}</h2>
-      <p item-end><small>{{item.note}}</small></p>
-    </ion-slide>
+        <ion-segment>
+          <ion-segment-button value="yes">
+            Yes
+          </ion-segment-button>
+          <ion-segment-button value="no">
+            No
+          </ion-segment-button>
+        </ion-segment>
 
+        <p style="line-height: 0; margin:15px 0;"><strong>Where did you feel it?</strong></p>
 
-  </ion-slides>
+        <ion-segment>
+          <ion-segment-button value="front_of_ankle">
+            Front of Ankle
+          </ion-segment-button>
+          <ion-segment-button value="back_of_ankle">
+            Back of Leg
+          </ion-segment-button>
+          <ion-segment-button value="no_stretch_felt">
+            No Stretch Felt
+          </ion-segment-button>
+        </ion-segment>
+
+      </ion-col>
+
+    </ion-row>
+  </ion-grid>
+
+  <ion-item-divider color="light">Right Ankle Clearing</ion-item-divider>
+
+  <ion-grid style="padding-top: 0;">
+    <ion-row>
+      <ion-col col-12>
+        <p style="line-height: 0; margin:15px 0;"><strong>Knee position:</strong></p>
+        <ion-segment>
+          <ion-segment-button value="behind_malleolus">
+            <small>Behind Malleolus</small>
+          </ion-segment-button>
+          <ion-segment-button value="within_malleolus">
+            <small>Within Malleolus</small>
+          </ion-segment-button>
+          <ion-segment-button value="beyond_malleolus">
+            <small>Beyond Malleolus</small>
+          </ion-segment-button>
+        </ion-segment>
+
+        <p style="line-height: 0; margin:15px 0;"><strong>Pain with movement</strong></p>
+
+        <ion-segment>
+          <ion-segment-button value="yes">
+            Yes
+          </ion-segment-button>
+          <ion-segment-button value="no">
+            No
+          </ion-segment-button>
+        </ion-segment>
+
+        <p style="line-height: 0; margin:15px 0;"><strong>Where did you feel it?</strong></p>
+
+        <ion-segment>
+          <ion-segment-button value="front_of_ankle">
+            Front of Ankle
+          </ion-segment-button>
+          <ion-segment-button value="back_of_ankle">
+            Back of Leg
+          </ion-segment-button>
+          <ion-segment-button value="no_stretch_felt">
+            No Stretch Felt
+          </ion-segment-button>
+        </ion-segment>
+
+      </ion-col>
+
+    </ion-row>
+  </ion-grid>
+
+  <button ion-button full block (click)="closeModal()" color="secondary" >Save</button>
 
 </ion-content>
