--- a/myApp/src/pages/screening-fms/screening-fms.html
+++ b/myApp/src/pages/screening-fms/screening-fms.html
@@ -96,6 +96,6 @@
   </ion-grid>
 
 
-  <button ion-button full block color="fmsRedSecondary" (click)="doConfirm()">Complete Screen</button>
+  <button ion-button full block color="secondary" (click)="doConfirm()">Complete Screen</button>
 
 </ion-content>
